--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
     margin: 0;
 }
 
+header {
+    margin: 1.25rem 2.5rem;
+}
+
 section {
     padding: 1rem;
 }
@@ -19,6 +23,7 @@ section {
     color: #FF0878;
     text-transform: uppercase;
     font-size: 1.25rem;
+    padding-bottom: 1rem;
 }
 
 .navbar-list {
@@ -51,21 +56,46 @@ section {
     margin-top: 1.25rem;
 }
 
+.grid-wrapper {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    padding-top: 1.25rem;
+}
 
+.box {
+    background-color: #444;
+    border-radius: 5px;
+    height: 200px;
+    padding: 1.25rem;
+}
 
-@media (min-width: 461px) {
+.box > p {
+    margin: 0;
+}
+
+@media (min-width: 508px) {
     .navbar {
         justify-content: space-between;
+    }
+
+    .title {
+        padding-bottom: 0;
     }
     
     .content-wrapper {
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
         margin: auto;
         max-width: 80%;
     }
 
     .section-wrapper {
         grid-template-columns: auto 60%;
-    }   
+    } 
+    
+    .projects {
+        display: inline;
+    }
 }
