--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ body {
     font-family: 'Open Sans', sans-serif;
     height: 100vh;
     margin: 0;
-    background-color: #d8eefe;
 }
 
 section {
-    padding: 1rem;
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
 }
 
 h2 {
@@ -21,6 +21,19 @@ footer {
     text-align: center;
 }
 
+.white-background {
+    background-color: #fffffe;
+}
+
+.blue-background {
+    background-color: #d8eefe;
+}
+
+.navbar {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
 .navbar-collapse {
     flex-grow: 0;
 }
@@ -28,8 +41,15 @@ footer {
 .title {
     color: #ef4565;
     text-transform: uppercase;
-    font-size: 1.25rem;
+    font-size: 1.625rem;
     padding-top: 0;
+    padding-bottom: 0;
+}
+
+.section-wrapper {
+    padding: 1rem;
+    width: 80%;
+    margin: auto;
 }
 
 .content-image {
@@ -37,7 +57,7 @@ footer {
     height: auto;
 }
 
-.section-wrapper {
+.section-content {
     display: grid;
     gap: 1.25rem;
     margin-top: 1.25rem;
@@ -50,15 +70,37 @@ footer {
 }
 
 .box {
-    background-color: #444;
     border-radius: 5px;
     height: 200px;
     padding: 1.25rem;
-    background-color: #fffffe;
 }
 
 .box>p {
-    margin: 0;
+    margin-right: 0;
+}
+
+.white-background .box {
+    background-color: #094067;
+}
+
+.white-background .box>h3 {
+    color: #fffffe;
+}
+
+.white-background .box>p {
+    color: #d8eefe;
+}
+
+.blue-background .box {
+    background-color: #fffffe;
+}
+
+.blue-background .box>h3 {
+    color: #094067;
+}
+
+.blue-background .box>p {
+    color: #5f6c7b;
 }
 
 .social-links {
@@ -93,10 +135,10 @@ footer {
         align-items: center;
         flex-wrap: wrap;
         margin: auto;
-        max-width: 80%;
+        /* max-width: 80%; */
     }
 
-    .section-wrapper {
+    .section-content {
         grid-template-columns: auto 60%;
     }
 
